# InOutModule

./: .gitignore  CaseStudy.py  ExcelDefinition.py  ExcelDefinitions.xml  ExcelReader.py  ExcelWriter.py  LEGODataFrame.py  PypsaReader.py  README.md  SQLiteWriter.py  TabSepReader.py  TableDefinition.py  TableDefinitions.xml  Utilities.py  changelog-LEGOExcels.md  environment.yml  nrel118-reader.py  printer.py  pyproject.toml  pypsa_helper.py
.github/workflows/: ci.yaml
data/example/: Data_Packages.xlsx  Data_Sources.xlsx  Global_Parameters.xlsx  Global_Scenarios.xlsx  Heat_Demand.xlsx  Heat_Nodes.xlsx  Heat_P2H_Conversion_Factors.xlsx  Heat_P2H_Technologies.xlsx  Power_BusInfo.xlsx  Power_Demand.xlsx  Power_Demand_KInRows.xlsx  Power_Hindex.xlsx  Power_ImportExport.xlsx  Power_Inflows.xlsx  Power_Inflows_KInRows.xlsx  Power_Network.xlsx  Power_Storage.xlsx  Power_ThermalGen.xlsx  Power_VRES.xlsx  Power_VRESProfiles.xlsx  Power_VRESProfiles_KInRows.xlsx  Power_WeightsK.xlsx  Power_WeightsRP.xlsx  Power_Wind_TechnicalDetails.xlsx
examples/: Power_BusInfo.xlsx  Power_Demand.xlsx  Power_Hindex.xlsx  Power_Network.xlsx  Power_ThermalGen.xlsx  Power_VRES.xlsx  Power_VRESProfiles.xlsx  Power_WeightsK.xlsx  Power_WeightsRP.xlsx
templates/: Power_VRESProfiles-template.xlsx
tests/: test_ExcelReaderWriter.py
