[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "InOutModule"
version = "0.0.0-dev"
readme = "README.md"

[tool.setuptools]
py-modules = ['CaseStudy', 'ExcelReader', 'ExcelWriter', 'printer', 'PypsaReader', 'pypsa_helper', 'SQLiteWriter', 'TableDefinition']